SLD/Pre-stylized .slider__dot

--- a/css/main.css
+++ b/css/main.css
@@ -52,4 +52,12 @@ img {
   padding: 0 15px;
   width: 100%;
 }
+.slider__dot {
+  margin-right: 10px;
+  border: 1.5px solid #d8bba3;
+  width: 9px;
+  height: 9px;
+  border-radius: 50px;
+  outline: none;
+}
 /*# sourceMappingURL=main.css.map */
