--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -1,8 +1,12 @@
 .slider__dot {
 	margin-right: 10px;
-    border: 1.5px solid #d8bba3;
-    width: 9px;
-    height: 9px;
+    border: 2px solid #7c7a78;
+    width: 15px;
+    height: 15px;
     border-radius: 50px;
     outline: none;
+}
+
+.slider__dot.active {
+	background-color: #f15730;
 }
