--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -1,3 +1,9 @@
+.slider__dots {
+	margin: 0 auto;
+	margin-top: 20px;
+	display: flex;
+}
+
 .slider__dot {
 	margin-right: 10px;
     border: 2px solid #7c7a78;
