--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -1,3 +1,13 @@
+.slider {
+	margin: 0 auto;
+	max-width: 1000px;
+}
+
+.slider-wrapper {
+	display: flex;
+	justify-content: center;
+}
+
 .slider__dots {
 	margin: 0 auto;
 	margin-top: 20px;
