SLD/Edited .slider-wrapper as grid

--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -5,7 +5,8 @@
 
 .slider-wrapper {
 	margin: 20px auto 20px;
-	display: flex;
+	display: grid;
+	grid: auto / repeat(9, auto);
 	justify-content: center;
 }
 
