--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,7 @@
   --black: #000;
 }
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 html {
   height: 100%;
@@ -58,18 +57,13 @@ img {
 }
 .slider-wrapper {
   margin: 20px auto 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: grid;
+  grid: auto / repeat(9, auto);
+  justify-content: center;
 }
 .slider__dots {
   margin: 0 auto;
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .slider__dot {
