--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -10,6 +10,15 @@
 	justify-content: center;
 }
 
+.slider__item {
+	margin-right: 5px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+	
+}
+
 .slider__dots {
 	margin: 0 auto;
 	margin-top: 20px;
