--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -19,11 +19,14 @@
 
 }
 
-.slider__nav {
-	font-size: 20px;
+button {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: #b8b2b1;
+	font-size: 12px;
+	cursor: pointer;
 }
-
-
 
 .slider__dots {
 	margin: 0 auto;
