--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -19,6 +19,13 @@
 
 }
 
+.slider__nav {
+	display: grid;
+	grid: auto / repeat(2, auto);
+	justify-content: center;
+	column-gap: 6px;
+}
+
 button {
 	width: 40px;
 	height: 40px;
