--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -19,14 +19,14 @@
 
 }
 
-.slider__nav {
+.slider-nav {
 	display: grid;
 	grid: auto / repeat(2, auto);
 	justify-content: center;
 	column-gap: 6px;
 }
 
-button {
+.slider-nav button {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
@@ -35,13 +35,13 @@ button {
 	cursor: pointer;
 }
 
-.slider__dots {
+.slider-dots {
 	margin: 0 auto;
 	margin-top: 20px;
 	display: flex;
 }
 
-.slider__dot {
+.slider-dot {
 	margin-right: 10px;
     border: 2px solid #7c7a78;
     width: 15px;
@@ -50,6 +50,6 @@ button {
     outline: none;
 }
 
-.slider__dot.active {
+.slider-dot.active {
 	background-color: #f15730;
 }
