--- a/css/main.css
+++ b/css/main.css
@@ -84,15 +84,18 @@ img {
 .slider-dots {
   margin: 0 auto;
   margin-top: 20px;
-  display: flex;
+  display: grid;
+  grid: auto / repeat(3, auto);
+  justify-content: center;
+  column-gap: 8px;
 }
 .slider-dot {
-  margin-right: 10px;
   border: 2px solid #7c7a78;
   width: 15px;
   height: 15px;
   border-radius: 50px;
   outline: none;
+  cursor: pointer;
 }
 .slider-dot.active {
   background-color: #f15730;
