--- a/less/sections/_basic.less
+++ b/less/sections/_basic.less
@@ -1,4 +1,5 @@
 :root {
+	--h1: 'Oswald';
     --mainBg: #fff;
     --yellow: #ffff00e3;
     --red: #ff0000d7;
@@ -19,7 +20,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-family: var(--ProximaNova);
+    font-family: var(--h1);
     font-weight: 400;
     font-size: 18px;
     color: var(--text);
