--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -1,3 +1,10 @@
+h1 {
+	margin-top: 20px;
+	font-size: 50px;
+	font-weight: 400;
+	text-align: center;
+}
+
 .slider {
 	margin: 0 auto;
 	max-width: 1000px;
