--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ img {
   margin: 0 auto;
   padding: 0 15px;
   width: 100%;
+  max-width: 1000px;
 }
 h1 {
   margin-top: 20px;
@@ -60,16 +61,25 @@ h1 {
   text-align: center;
 }
 .slider {
-  margin: 0 auto;
-  max-width: 1000px;
+  margin: 0 auto 20px;
+  position: relative;
+  width: 300px;
+  height: 90px;
+  overflow: hidden;
 }
 .slider-wrapper {
-  margin: 20px auto 20px;
-  display: grid;
-  grid: auto / repeat(9, auto);
+  position: relative;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1000px;
+  height: 110px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: 1s ease-in;
+  transition: 1s ease-in;
 }
 .slider__item {
   margin-right: 5px;
