--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -6,15 +6,22 @@ h1 {
 }
 
 .slider {
-	margin: 0 auto;
-	max-width: 1000px;
+	margin: 0 auto 20px;
+	position: relative;
+	width: 300px;
+	height: 90px;
+	overflow: hidden;
 }
 
 .slider-wrapper {
-	margin: 20px auto 20px;
-	display: grid;
-	grid: auto / repeat(9, auto);
+	position: relative;
+	left: 0;
+	display: flex;
+	//grid: auto / repeat(9, auto);
+	width: 1000px;
+	height: 110px;
 	justify-content: center;
+	transition: 1s ease-in;
 }
 
 .slider__item {
