--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,13 @@ p {
   margin: 0;
   font-size: 25px;
 }
+h1 {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  font-size: 50px;
+  font-weight: 400;
+  text-align: center;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -53,12 +60,6 @@ img {
   padding: 0 15px;
   width: 100%;
   max-width: 1000px;
-}
-h1 {
-  margin-top: 20px;
-  font-size: 50px;
-  font-weight: 400;
-  text-align: center;
 }
 .slider {
   margin: 0 auto 20px;
