--- a/less/sections/_basic.less
+++ b/less/sections/_basic.less
@@ -49,6 +49,14 @@ p {
     font-size: 25px;
 }
 
+h1 {
+	margin-top: 20px;
+	margin-bottom: 50px;
+	font-size: 50px;
+	font-weight: 400;
+	text-align: center;
+}
+
 img {
     max-width: 100%;
     height: auto;
