--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -1,54 +1,53 @@
 .slider {
-	margin: 0 auto 50px;
-	position: relative;
-	width: 300px;
-	height: 90px;
-	overflow: hidden;
+    margin: 0 auto 50px;
+    position: relative;
+    width: 300px;
+    height: 90px;
+    overflow: hidden;
 }
 
 .slider-wrapper {
-	position: relative;
-	left: 0;
-	display: flex;
-	//grid: auto / repeat(9, auto);
-	width: 1000px;
-	height: 110px;
-	justify-content: center;
-	transition: 1s ease-in;
+    position: relative;
+    left: 0;
+    display: flex;
+    //grid: auto / repeat(9, auto);
+    width: 1000px;
+    height: 110px;
+    //justify-content: center;
+    transition: 1s ease-in;
 }
 
 .slider__item {
-	margin-right: 5px;
+    margin-right: 15px;
 
-	&:last-child {
-		margin-right: 0;
-	}
-
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .slider-nav {
-	display: grid;
-	grid: auto / repeat(2, auto);
-	justify-content: center;
-	column-gap: 6px;
+    display: grid;
+    grid: auto / repeat(2, auto);
+    justify-content: center;
+    column-gap: 6px;
 }
 
 .slider-nav button {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: #b8b2b1;
-	font-size: 12px;
-	cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #b8b2b1;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 .slider-dots {
-	margin: 0 auto;
-	margin-top: 20px;
-	display: grid;
-	grid: auto / repeat(3, auto);
-	justify-content: center;
-	column-gap: 8px;
+    margin: 0 auto;
+    margin-top: 20px;
+    display: grid;
+    grid: auto / repeat(3, auto);
+    justify-content: center;
+    column-gap: 8px;
 }
 
 .slider-dot {
@@ -57,9 +56,9 @@
     height: 15px;
     border-radius: 50px;
     outline: none;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .slider-dot.active {
-	background-color: #f15730;
+    background-color: #f15730;
 }
