SLD/JS/Commented JS code

--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -14,7 +14,7 @@
     width: 1000px;
     height: 110px;
     //justify-content: center;
-    transition: 1s ease-in;
+    transition: .5s ease-in;
 }
 
 .slider__item {
