--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@
   --black: #000;
 }
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 html {
   height: 100%;
@@ -60,33 +62,50 @@ img {
   width: 100%;
   max-width: 1000px;
 }
-.slider {
+.slider-wrapper {
   margin: 0 auto 50px;
   position: relative;
   width: 300px;
   height: 90px;
   overflow: hidden;
 }
-.slider-wrapper {
+.slider {
   position: relative;
   display: grid;
   grid: auto / repeat(9, auto);
   width: 1000px;
   height: 90px;
-  justify-content: left;
-  column-gap: 15px;
+  -webkit-box-pack: left;
+  -webkit-justify-content: left;
+     -moz-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-column-gap: 15px;
+     -moz-column-gap: 15px;
+          column-gap: 15px;
+  -webkit-transition: 0.5s ease-in;
+  -o-transition: 0.5s ease-in;
+  -moz-transition: 0.5s ease-in;
   transition: 0.5s ease-in;
 }
 .slider-nav {
   display: grid;
   grid: auto / repeat(2, auto);
-  justify-content: center;
-  column-gap: 6px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 6px;
+     -moz-column-gap: 6px;
+          column-gap: 6px;
 }
 .slider-nav button {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+     -moz-border-radius: 50%;
+          border-radius: 50%;
   background-color: #b8b2b1;
   font-size: 12px;
   cursor: pointer;
@@ -96,14 +115,22 @@ img {
   margin-top: 20px;
   display: grid;
   grid: auto / repeat(3, auto);
-  justify-content: center;
-  column-gap: 8px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
 }
 .slider-dot {
   border: 2px solid #7c7a78;
   width: 15px;
   height: 15px;
-  border-radius: 50px;
+  -webkit-border-radius: 50px;
+     -moz-border-radius: 50px;
+          border-radius: 50px;
   outline: none;
   cursor: pointer;
 }
