--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -8,13 +8,13 @@
 
 .slider {
     position: relative;
-    display: grid;
+	left: 0;
+    display: flex;
     grid: auto / repeat(9, auto);
     width: 1000px;
     height: 90px;
-    justify-content: left;
 	column-gap: 15px;
-    transition: .5s ease-in;
+    transition: ease-in-out .5s;
 }
 
 .slider-nav {
