--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -33,6 +33,10 @@
     cursor: pointer;
 }
 
+.slider-nav button.active {
+    background-color: #d13c21;
+}
+
 .slider-dots {
     margin: 0 auto;
     margin-top: 20px;
