SLD/Removed top indent from .slider-dots & added to .slider-nav

--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -18,6 +18,7 @@
 }
 
 .slider-nav {
+	margin-bottom: 20px;
     display: grid;
     grid: auto / repeat(2, auto);
     justify-content: center;
@@ -39,7 +40,6 @@
 
 .slider-dots {
     margin: 0 auto;
-    margin-top: 20px;
     display: grid;
     grid: auto / repeat(3, auto);
     justify-content: center;
