--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ img {
   transition: ease-in-out 0.5s;
 }
 .slider-nav {
+  margin-bottom: 20px;
   display: grid;
   grid: auto / repeat(2, auto);
   justify-content: center;
@@ -96,7 +97,6 @@ img {
 }
 .slider-dots {
   margin: 0 auto;
-  margin-top: 20px;
   display: grid;
   grid: auto / repeat(3, auto);
   justify-content: center;
