--- a/less/sections/_slider.less
+++ b/less/sections/_slider.less
@@ -46,7 +46,7 @@
     column-gap: 8px;
 }
 
-.slider-dot {
+.slider-dots button {
     border: 2px solid #7c7a78;
     width: 15px;
     height: 15px;
@@ -55,6 +55,6 @@
     cursor: pointer;
 }
 
-.slider-dot.active {
+.slider-dots button.active {
     background-color: #f15730;
 }
